--- a/index.html
+++ b/index.html
@@ -35,24 +35,17 @@
               <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Topics
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Technology</a></li>
-                <li><a class="dropdown-item" href="#">Web Development</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Support</a></li>
-                <li><a class="dropdown-item" href="#">Write for us</a></li>
-              </ul>
-            </li>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Topics
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Technology</a>
+                        <a class="dropdown-item" href="#">Web Development</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Support</a>
+                        <a class="dropdown-item" href="#">Write for us</a>
+                    </div>
+                </li>
             <li class="nav-item">
               <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a>
             </li>
